added compose file and a container file for the server

--- a/server/Containerfile
+++ b/server/Containerfile
@@ -4,8 +4,7 @@ WORKDIR /src
 COPY go.mod go.sum .
 RUN go mod tidy && go mod download
 COPY . .
-# TODO: replace with >> RUN go test ./... && go build -o server ./cmd/server/main.go
-RUN go build -o server ./cmd/server/main.go
+RUN go test ./... && go build -o server ./cmd/server/main.go
 
 FROM alpine:3.22
 
