--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@aws-crypto/sha256-browser": "^5.2.0",
@@ -17,7 +18,8 @@
         "eslint": "^9.30.0",
         "eslint-config-preact": "^1.5.0",
         "typescript": "^5.8.3",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vitest": "^3.2.4"
     },
     "eslintConfig": {
         "extends": "preact"
