--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 22.x
-        cache: 'pnpm'
+        cache: 'npm' # work this out so that it uses pnpm
     - name: Install pnpm
       run: npm install -g pnpm
     - run: cd web
