--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,8 +22,8 @@ jobs:
         go-version: '1.20'
         
     - name: Test
-      run: go test -v ./...
+      run: cd server && go test -v ./...
     - name: Build
-      run: go build -v ./...
+      run: cd server && go build -v ./...
 
 
