--- a/web/package.json
+++ b/web/package.json
@@ -1,27 +1,32 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "vitest"
-    },
-    "dependencies": {
-        "@aws-crypto/sha256-browser": "^5.2.0",
-        "preact": "^10.25.3",
-        "preact-iso": "^2.9.2",
-        "preact-render-to-string": "^6.5.13"
-    },
-    "devDependencies": {
-        "@preact/preset-vite": "^2.9.3",
-        "eslint": "^9.30.0",
-        "eslint-config-preact": "^1.5.0",
-        "typescript": "^5.8.3",
-        "vite": "^6.3.5",
-        "vitest": "^3.2.4"
-    },
-    "eslintConfig": {
-        "extends": "preact"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "format": "prettier . --write"
+  },
+  "dependencies": {
+    "@aws-crypto/sha256-browser": "^5.2.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "preact": "^10.25.3",
+    "preact-iso": "^2.9.2",
+    "preact-render-to-string": "^6.5.13",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.9.3",
+    "eslint": "^9.30.0",
+    "eslint-config-preact": "^1.5.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
+  },
+  "eslintConfig": {
+    "extends": "preact"
+  }
 }
